# grainsift

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  sample_feedback.csv  test_data.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: calibration.ts  client.ts  dashboard.ts  discovery.ts  extraction.ts  pipeline.ts  projects.ts  prompts.ts  query.ts  runs.ts  settings.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: card.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  DiscoveryPage.tsx  ExtractPage.tsx  PipelinePage.tsx  ProjectPage.tsx  ProjectsPage.tsx  ReviewPage.tsx  RunPage.tsx  RunsPage.tsx  SettingsPage.tsx  UploadPage.tsx
grainsift/: __init__.py  cli.py  config.py  exceptions.py
grainsift/api/: deps.py  main.py
grainsift/api/routes/: calibration.py  dashboard.py  discovery.py  extraction.py  pipeline.py  projects.py  prompts.py  query.py  review.py  runs.py  settings.py  upload.py
grainsift/engine/: aggregation.py  calibration.py  config_store.py  discovery.py  extraction.py  ingest.py  language.py  prompt_store.py  query.py  summarization.py  validation.py
grainsift/llm/: client.py  prompts.py
grainsift/llm/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
grainsift/models/: database.py  enums.py  schemas.py
scripts/: smoke_test.py
tests/: conftest.py  test_aggregation.py  test_discovery.py  test_ingest.py  test_validation.py
tests/fixtures/: sample_feedback.csv
