[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grainsift"
version = "0.1.0"
description = "Open source, self-hosted feedback analysis pipeline for product teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["feedback", "analysis", "product-management", "llm", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "instructor>=1.7",
    "anthropic>=0.40",
    "openai>=1.58",
    "pandas>=2.2",
    "langdetect>=1.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0",
    "typer[all]>=0.15",
    "rich>=13.9",
    "httpx>=0.28",
    "aiofiles>=24.1",
    "deep-translator>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "faker>=33.0",
]

[project.scripts]
grainsift = "grainsift.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["grainsift"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["grainsift"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["grainsift"]
